--- a/FinalProject/CSS/Thankyou.css
+++ b/FinalProject/CSS/Thankyou.css
@@ -9,6 +9,7 @@ body {
    text-align: center;
  }
 
+/* Submit Button CSS Style*/
  input[type=submit] {
      background-color: #00008B;
      color: white;
