--- a/FinalProject/CSS/About Us.css
+++ b/FinalProject/CSS/About Us.css
@@ -17,13 +17,14 @@ body {
   width: 45%;
 }
 
+/* Navigation CSS Style Start*/
 .navcontainer {
 
   margin-top: 2em;
   width: 100%;
 }
 
-/* Navigation CSS Style Start*/
+
 .topnav {
   overflow: hidden;
   background-color: #FFFFFF;
@@ -66,6 +67,7 @@ body {
 
 /* Navigation CSS Style End*/
 
+/* Footer CSS Style Start*/
 footer {
   position: relative;
   bottom: -35px;
@@ -76,3 +78,4 @@ footer {
   display: inline-block;
   font-size: 12px;
 }
+/* Footer CSS Style End*/
