--- a/FinalProject/CSS/Thankyou.css
+++ b/FinalProject/CSS/Thankyou.css
@@ -10,16 +10,18 @@ body {
  }
 
 /* Submit Button CSS Style*/
- input[type=submit] {
+.button {
      background-color: #00008B;
      color: white;
      padding: 10px 40px;
      border: none;
      cursor: pointer;
-
-
  }
 
- input[type=submit]:hover {
+.button:hover {
      background-color: #45a049;
  }
+
+a {
+  text-decoration: none;
+}
