--- a/FinalProject/CSS/AboutUs.css
+++ b/FinalProject/CSS/AboutUs.css
@@ -2,43 +2,44 @@ body {
   font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
   background-color: #CDC4CB;
   opacity: 0.8;
-
-}
-
-.aboutus {
-  width: 55%;
-  margin-top: 0em;
-
 }
 
 .content {
   margin-top: 2em;
   text-align: center;
-  width: 45%;
+}
+
+.aboutus {
+  width: 800px;
+  display: inline-block;
+}
+
+.content2 {
+  position: relative;
+  left: 25%;
+  top: 100%;
+  width: 50%;
+  height: 50%;
 }
 
 /* Navigation CSS Style Start*/
 .navcontainer {
-
   margin-top: 2em;
   width: 100%;
 }
-
 
 .topnav {
   overflow: hidden;
   background-color: #FFFFFF;
   width: 100%;
   height: 80px;
-
 }
 
 .topnav-right {
   float: right;
-    padding: 14px 16px;
-    padding-right: 2em;
-    font-weight: bold;
-
+  padding: 14px 16px;
+  padding-right: 2em;
+  font-weight: bold;
 }
 
 .topnav a {
@@ -63,8 +64,6 @@ body {
 #iamhere {
   color: red;
 }
-
-
 /* Navigation CSS Style End*/
 
 /* Footer CSS Style Start*/
