--- a/FinalProject/CSS/ContactUs.css
+++ b/FinalProject/CSS/ContactUs.css
@@ -1,25 +1,21 @@
 /* Navigation CSS Style Start*/
 .navcontainer {
-
   margin-top: 2em;
   width: 100%;
 }
-
 
 .topnav {
   overflow: hidden;
   background-color: #FFFFFF;
   width: 100%;
   height: 80px;
-
 }
 
 .topnav-right {
   float: right;
-    padding: 14px 16px;
-    padding-right: 2em;
-    font-weight: bold;
-
+  padding: 14px 16px;
+  padding-right: 2em;
+  font-weight: bold;
 }
 
 .topnav a {
@@ -42,7 +38,6 @@
 }
 /* Navigation CSS Style End*/
 
-
 body {
   font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
   background-color: #CDC4CB;
@@ -51,51 +46,51 @@ body {
 
 /* Form Style inputs */
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 input[type=text], select, textarea {
-    width: 100%;
-    padding: 12px;
-    border: 1px solid #ccc;
-    margin-top: 6px;
-    margin-bottom: 16px;
-    resize: vertical;
+  width: 100%;
+  padding: 12px;
+  border: 1px solid #ccc;
+  margin-top: 6px;
+  margin-bottom: 16px;
+  resize: vertical;
 }
 
 input[type=submit] {
-    background-color: #4CAF50;
-    color: white;
-    padding: 12px 20px;
-    border: none;
-    cursor: pointer;
+  background-color: #4CAF50;
+  color: white;
+  padding: 12px 20px;
+  border: none;
+  cursor: pointer;
 }
 
 input[type=submit]:hover {
-    background-color: #45a049;
+  background-color: #45a049;
 }
 
 /* Style the container/contact section */
 .container {
   margin-top: 10px;
-    border-radius: 5px;
-    background-color: #CDC4CB;
-    padding: 15px;
+  border-radius: 5px;
+  background-color: #CDC4CB;
+  padding: 15px;
 }
 
 /* Create two columns that float next to eachother */
 .column {
-    float: left;
-    width: 50%;
-    margin-top: 6px;
-    padding: 40px;
+  float: left;
+  width: 50%;
+  margin-top: 6px;
+  padding: 40px;
 }
 
 /* Clear floats after the columns */
 .row:after {
-    content: "";
-    display: table;
-    clear: both;
+  content: "";
+  display: table;
+  clear: both;
 }
 
 /* Footer CSS Style Start*/
@@ -116,7 +111,10 @@ footer {
 }
 
 /* error class gets applied by jQuery Validate */
-input.error,  { border: thin solid red; }
+input.error {
+  border: thin solid red;
+}
+
 label.error {
     color: red;
 }
