--- a/FinalProject/CSS/Treatments.css
+++ b/FinalProject/CSS/Treatments.css
@@ -5,13 +5,24 @@ body {
 
 .menunav{
   margin-top: 5em;
+  clear: both;
+  text-align: center;
+}
+
+.menunav:before {
+  clear: both;
+}
+
+.menunav:after {
+  clear: both;
 }
 
 .menunav ul li {
-text-decoration: none;
-display: inline;
-font-weight: bold;
-border-right: 1px solid black;
+  text-decoration: none;
+  display: inline;
+  font-weight: bold;
+  border-right: 1px solid black;
+  text-align: center;
 }
 
 .menunav a {
@@ -33,35 +44,31 @@ border-right: 1px solid black;
 }
 
 .table-container {
-    display: table;
+  clear: both;
+  text-align: center;
 }
 
 .table-item {
-    background-color: grey;
-    color: #fff;
-    display: table-cell;
-    padding: 10px;
-    vertical-align: middle;
-    text-align: center;
-    width: 300px;
-    height: 400px;
-    border-right: 1px solid black;
-
+  background-color: grey;
+  color: #fff;
+  display: inline-block;
+  padding: 10px;
+  vertical-align: middle;
+  width: 300px;
+  height: 400px;
 }
 
 input[type=submit] {
-    background-color: #00008B;
-    color: white;
-    padding: 10px 40px;
-    border: none;
-    cursor: pointer;
-
+  background-color: #00008B;
+  color: white;
+  padding: 10px 40px;
+  border: none;
+  cursor: pointer;
 }
 
 input[type=submit]:hover {
-    background-color: #45a049;
+  background-color: #45a049;
 }
-
 
 .navcontainer {
   margin-top: 2em;
@@ -75,15 +82,13 @@ input[type=submit]:hover {
   opacity: 0.8;
   width: 100%;
   height: 80px;
-
 }
 
 .topnav-right {
   float: right;
-    padding: 14px 16px;
-    padding-right: 2em;
-    font-weight: bold;
-
+  padding: 14px 16px;
+  padding-right: 2em;
+  font-weight: bold;
 }
 
 .topnav a {
@@ -105,6 +110,7 @@ input[type=submit]:hover {
   color: white;
 }
 /* Navigation CSS Style End*/
+
 /* Footer CSS Style Start*/
 footer {
   position: relative;
@@ -117,12 +123,12 @@ footer {
   font-size: 12px;
 }
 /* Footer CSS Style End*/
+
 #iamhere {
   color: red;
 }
 
 /* Image Attributes*/
-
 .facilities {
   width: 200px;
   height: 125px;
