--- a/FinalProject/CSS/Welcome.css
+++ b/FinalProject/CSS/Welcome.css
@@ -2,22 +2,19 @@ body {
   font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
 }
 
-
-
 .bgimage {
   width: 100%;
   height: 100%;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  position: absolute;}
-
+  position: absolute;
+}
 
 .container {
   position: absolute;
   margin-top: 2em;
   width: 100%;
-
 }
 
 /* Navigation CSS Style Start*/
@@ -27,17 +24,13 @@ body {
   opacity: 0.8;
   width: 100%;
   height: 80px;
-
-
 }
 
 .topnav-right {
   float: right;
-    padding: 14px 16px;
-    padding-right: 2em;
-    font-weight: bold;
-
-
+  padding: 14px 16px;
+  padding-right: 2em;
+  font-weight: bold;
 }
 
 .topnav a {
