--- a/FinalProject/CSS/Treatments.css
+++ b/FinalProject/CSS/Treatments.css
@@ -125,7 +125,8 @@ footer {
 /* Footer CSS Style End*/
 
 #iamhere {
-  color: red;
+  color: purple;
+  background-color: #ddd;
 }
 
 /* Image Attributes*/
