--- a/FinalProject/CSS/ContactUs.css
+++ b/FinalProject/CSS/ContactUs.css
@@ -58,17 +58,18 @@ input[type=text], select, textarea {
   resize: vertical;
 }
 
-input[type=submit] {
-  background-color: #4CAF50;
+.button {
+  background-color: #00008B;
   color: white;
-  padding: 12px 20px;
+  padding: 10px 40px;
   border: none;
   cursor: pointer;
 }
 
-input[type=submit]:hover {
+.button:hover {
   background-color: #45a049;
 }
+
 
 /* Style the container/contact section */
 .container {
