--- a/FinalProject/CSS/Treatments.css
+++ b/FinalProject/CSS/Treatments.css
@@ -113,7 +113,7 @@ input[type=submit]:hover {
 
 /* Footer CSS Style Start*/
 footer {
-  position: relative;
+  position: absolute;
   bottom: -35px;
   width: 100%;
   height: 40px;
