--- a/DGMDE20/Stylesheet.css
+++ b/DGMDE20/Stylesheet.css
@@ -206,6 +206,16 @@ svg {
     float: left;
     clear: right;
     padding-top: 1.15rem;
+    animation: spin 10s linear infinite;
+}
+
+@keyframes spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
 
 svg #tea:hover {
